add jpa repo for fileServer